updated database schema
