# index.js
@@ -1,6 +1,6 @@
 const express = require('express');
 const bodyParser = require('body-parser');
-const contacts = require('./routes/contacts');
+const user = require('./routes/user');
 const MongoClient = require('mongodb').MongoClient;
 const mongodb = require('./db/connect');
 const app = express();
@@ -19,7 +19,7 @@ app
       res.setHeader('Access-Control-Allow-Origin', '*');
       next();
     })
-  .use('/contacts', contacts)
+  .use('/user', user)
 
 mongodb.initDb((err, mongodb) => {
   if (err) {
