# routes/contacts.js
@@ -1,13 +1,0 @@
-const express = require('express');
-
-const contactsController = require('../controllers/contacts');
-
-const router = express.Router();
-
-router.get('/', contactsController.getAllData);
-router.get('/:id', contactsController.getData);
-router.post('/', contactsController.createContact);
-router.put('/:id', contactsController.updateContact);
-router.delete('/:id', contactsController.deleteContact);
-
-module.exports = router;
