# routes/index.js
@@ -1,6 +1,6 @@
 const router = require('express').Router();
 
 router.use('/', require('./swagger.js'));
-router.use('/contacts', require('./contacts'));
+router.use('/user', require('./user'));
 
 module.exports = router;
