# swagger.json
@@ -18,7 +18,7 @@
         "responses": {}
       }
     },
-    "/contacts/": {
+    "/user/": {
       "get": {
         "description": "",
         "produces": [
@@ -69,7 +69,7 @@
         }
       }
     },
-    "/contacts/{id}": {
+    "/user/{id}": {
       "get": {
         "description": "",
         "produces": [
